@@ -1,5 +1,14 @@
 NAME = set
+
+noinst_DATA = $(GENERATED_SGML)
+
 SGML = set.sgml setmeta.sgml
-SGML_FILES = $(SGML)
+GENERATED_SGML = setrevhistory.sgml
+
+SGML_FILES = $(SGML) $(GENERATED_SGML)
 
 include $(top_srcdir)/Makefile.rules
+
+# Local variables:
+# mode: makefile
+# end:
